; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/vmware/vmci/extr_vmci_qpair.c_vmci_qpair_consume_free_space.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/vmware/vmci/extr_vmci_qpair.c_vmci_qpair_consume_free_space.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.vmci_qpair = type { i32 }
%struct.vmci_queue_header = type { i32 }

@VMCI_ERROR_INVALID_ARGS = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @vmci_qpair_consume_free_space(%struct.vmci_qpair* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.vmci_qpair*, align 8
  %4 = alloca %struct.vmci_queue_header*, align 8
  %5 = alloca %struct.vmci_queue_header*, align 8
  %6 = alloca i32, align 4
  store %struct.vmci_qpair* %0, %struct.vmci_qpair** %3, align 8
  %7 = load %struct.vmci_qpair*, %struct.vmci_qpair** %3, align 8
  %8 = icmp ne %struct.vmci_qpair* %7, null
  br i1 %8, label %11, label %9

9:                                                ; preds = %1
  %10 = load i32, i32* @VMCI_ERROR_INVALID_ARGS, align 4
  store i32 %10, i32* %2, align 4
  br label %21

11:                                               ; preds = %1
  %12 = load %struct.vmci_qpair*, %struct.vmci_qpair** %3, align 8
  %13 = call i32 @vmci_qpair_get_queue_headers(%struct.vmci_qpair* %12, %struct.vmci_queue_header** %5, %struct.vmci_queue_header** %4)
  %14 = load %struct.vmci_queue_header*, %struct.vmci_queue_header** %4, align 8
  %15 = load %struct.vmci_queue_header*, %struct.vmci_queue_header** %5, align 8
  %16 = load %struct.vmci_qpair*, %struct.vmci_qpair** %3, align 8
  %17 = getelementptr inbounds %struct.vmci_qpair, %struct.vmci_qpair* %16, i32 0, i32 0
  %18 = load i32, i32* %17, align 4
  %19 = call i32 @vmci_queue_header_free_space(%struct.vmci_queue_header* %14, %struct.vmci_queue_header* %15, i32 %18)
  store i32 %19, i32* %6, align 4
  %20 = load i32, i32* %6, align 4
  store i32 %20, i32* %2, align 4
  br label %21

21:                                               ; preds = %11, %9
  %22 = load i32, i32* %2, align 4
  ret i32 %22
}

declare dso_local i32 @vmci_qpair_get_queue_headers(%struct.vmci_qpair*, %struct.vmci_queue_header**, %struct.vmci_queue_header**) #1

declare dso_local i32 @vmci_queue_header_free_space(%struct.vmci_queue_header*, %struct.vmci_queue_header*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
